<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/berrio1"

    tools:context="com.example.amda8.berrio.Hoteles"
    tools:showIn="@layout/activity_hoteles">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/malecon"
            android:id="@+id/malecon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/Malecon"
            android:textColor="@color/yellow"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/central"
            android:id="@+id/central"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/Central"
            android:textColor="@color/yellow"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/dospalmas"
            android:id="@+id/dospalmas"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/Dos_palmas"
            android:textColor="@color/yellow"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:id="@+id/information" />
    </LinearLayout>

</LinearLayout>
</ScrollView>