<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.amda8.berrio.Bares"
        android:orientation="vertical"
        android:background="@drawable/berrio1"
        tools:showIn="@layout/activity_bares">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/carnaval"
                android:id="@+id/carnaval"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/carnaval"
                android:textColor="@color/yellow"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/barra"
                android:id="@+id/barra"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/barra"
                android:textColor="@color/yellow"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/ja"
                android:id="@+id/jalisco"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/jalisco"
                android:textColor="@color/yellow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/informationbares"
                android:textColor="@color/red"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
