<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context="com.example.amda8.berrio.Sitios"
        android:orientation="vertical"
        android:background="@drawable/berrio1"
        tools:showIn="@layout/activity_sitios">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/muelle"
                android:id="@+id/muelle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/muelle"
                android:textColor="@color/yellow"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/parque"
                android:id="@+id/parque"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/yellow"
                android:text="@string/parque"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:src="@drawable/berrio"
                android:id="@+id/puente"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_gravity="center_vertical"
                android:text="@string/puente"
                android:textColor="@color/yellow"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/informationturistica"
                android:textColor="@color/red"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>